# solitaire-pwa

./: .eslintrc.yml  .gitignore  .prettierignore  CMakeLists.txt  README.md  babel.config.json  jest.config.ts  package-lock.json  package.json
.github/workflows/: build.yml  lint.yml  test.yml
buildScripts/: distNetlify.js
docs/: cardTextures.md
src/cpp/solitaire/: HelloWorld.cpp  HelloWorld.h  Move.h  MoveFlag.h  MoveParser.cpp  MoveParser.h
src/cpp/solitaire/Parser/: MoveModifierParser.cpp  MoveModifierParser.h  MoveNumberParser.cpp  MoveNumberParser.h  Parser.cpp  Parser.h
src/cpp/wasm/: wasm.cpp
src/html/: index.html  manifest.webmanifest
src/style/: style.scss
src/ts/: canvasManager.ts  card.ts  cardCollection.ts  dragManager.ts  draw.ts  index.ts  loadCard.ts
src/ts/draw/: canvasManager.ts  cardCollection.ts  dragManager.ts  draw.ts  drawState.ts  loadCard.ts
src/ts/future/: futureInterface.ts  futureWorker.ts  message.ts
src/ts/moveNotation/: moveNotationDecoder.ts
src/ts/solitaire/: solitaire.ts
src/ts/stack/: displayStackHandler.ts  stackHandler.ts
template/: batchCardImport.ts
test/cpp/unit/: MoveParser.test.cpp  default.cpp
test/unit/: default.ts  moveNotationDecoder.test.ts
